update examples to have return at the end of main

--- a/1-introduccion/1.2-tipos-de-dato-y-operadores/presentacion.tex
+++ b/1-introduccion/1.2-tipos-de-dato-y-operadores/presentacion.tex
@@ -145,7 +145,7 @@
     \medskip
 
     El operador de casteo permite convertir un valor que es de un determinado tipo de dato a otro tipo de dato. Hay dos maneras de utilizarlo:
-\begin{lstlisting}[basicstyle=\scriptsize]
+\begin{lstlisting}[basicstyle=\tiny]
 int main() {
     float x = 101.25;
     // casteando x a int para poder usar %
@@ -155,6 +155,7 @@ int main() {
     // ejemplo: castear el dividendo para que el resultado de la division sea float y no int
     cout << "1/2 = " << 1/2 << endl; // 1/2 = 0
     cout << "1/2 = " << float(1)/2 << endl; // 1/2 = 0.5
+    return 0;
 }
 \end{lstlisting}
 \end{frame}
