fix lista enlazada definition

--- a/9-punteros/9.2-listas-enlazadas/presentacion.tex
+++ b/9-punteros/9.2-listas-enlazadas/presentacion.tex
@@ -48,7 +48,7 @@
 \begin{frame}{Listas enlazadas}
     Una lista enlazada es una \alert{estructura de datos dinámica} que almacena los datos de forma secuencial, no contigua.
     \begin{itemize}
-        \item Que sea dinámica significa que su tamaño físico puede variar durante tiempo de ejecución y que sus elementos se almacenan en diferentes porciones de la memoria.
+        \item Que sea dinámica significa que su tamaño físico puede variar durante tiempo de ejecución.
     \end{itemize}
     \begin{table}[]
         \centering
