fix: improve complexity slides

--- a/7-complejidad/presentacion.tex
+++ b/7-complejidad/presentacion.tex
@@ -47,7 +47,7 @@
 \begin{frame}{Complejidad temporal}
     La \alert{complejidad temporal} permite estimar cuánto tiempo utilizará un algoritmo para una determinada entrada. La idea es representar la \alert{eficiencia} como una función cuyo parámetro sea el tamaño de la entrada. \\
     \medskip
-    De esta manera, al calcular la complejidad temporal es posible \alert{saber si un algorimo es lo suficientemente rápido} sin tener que implementarlo. \\
+    De esta manera, al calcular la complejidad temporal es posible \alert{saber si un algoritmo es lo suficientemente rápido} sin tener que implementarlo. \\
     \medskip
     La complejidad temporal se denota \alert{O(...)} donde los tres puntos representan alguna función.
 \end{frame}
@@ -108,7 +108,7 @@ int sumaTriangular(int m[][1000], int n) {
 \end{frame}
 
 \begin{frame}[fragile]{Complejidad temporal: fases}
-    Cuando un algoritmo consiste de múltiples fases (partes, funciones, etc), su complejidad será la complejidad de la \alert{fase que que requiere más tiempo}. \\
+    Cuando un algoritmo consiste de múltiples fases (partes, funciones, etc), su complejidad será la complejidad de la \alert{fase que mayor tiempo implica}. \\
     Esto se debe a que la fase que requiere más tiempo (la de mayor complejidad) termina siendo el "cuello de botella" del algoritmo. \\
     \medskip
     \begin{columns}
